<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.MainActivity">

    <View
        android:id="@+id/card_entry_align_view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/card_entry_padding"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_entry_tv_amount" />

    <TextView
        android:id="@+id/card_entry_tv_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/card_entry_amount_padding_vertical"
        android:text="$200.00"
        android:textAlignment="center"
        android:textSize="@dimen/card_entry_amount_text_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/card_entry_align_view"
        app:layout_constraintRight_toRightOf="@+id/card_entry_align_view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/card_entry_tv_enter_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/card_entry_label_padding_vertical"
        android:text="@string/card_entry_enter_card_label"
        android:textSize="@dimen/card_entry_label_text_size"
        app:layout_constraintLeft_toLeftOf="@+id/card_entry_align_view"
        app:layout_constraintRight_toRightOf="@+id/card_entry_align_view"
        app:layout_constraintTop_toBottomOf="@+id/card_entry_tv_amount" />

    <EditText
        android:id="@+id/card_entry_ed_enter_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:elevation="2dp"
        android:hint="@string/card_entry_card_hint"
        android:inputType="number"
        android:digits="01234 56789"
        android:maxLength="19"
        android:paddingVertical="@dimen/normal_padding"
        android:textAlignment="center"
        android:textSize="@dimen/card_entry_input_text_size"
        app:layout_constraintLeft_toLeftOf="@+id/card_entry_align_view"
        app:layout_constraintRight_toRightOf="@+id/card_entry_align_view"
        app:layout_constraintTop_toBottomOf="@+id/card_entry_tv_enter_card" />

    <TextView
        android:id="@+id/card_entry_tv_expiry_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/card_entry_label_padding_vertical"
        android:text="@string/card_entry_expiry_date_label"
        android:textSize="@dimen/card_entry_label_text_size"
        app:layout_constraintLeft_toLeftOf="@+id/card_entry_align_view"
        app:layout_constraintTop_toBottomOf="@+id/card_entry_ed_enter_card"
        app:layout_constraintWidth_percent=".43" />

    <EditText
        android:id="@+id/card_entry_ed_expiry_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:elevation="2dp"
        android:hint="@string/card_entry_expiry_date_hint"
        android:digits="01234/56789"
        android:maxLength="5"
        android:inputType="number"
        android:paddingVertical="@dimen/normal_padding"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/card_entry_input_text_size"
        app:layout_constraintLeft_toLeftOf="@+id/card_entry_tv_expiry_date"
        app:layout_constraintRight_toRightOf="@+id/card_entry_tv_expiry_date"
        app:layout_constraintTop_toBottomOf="@+id/card_entry_tv_expiry_date" />

    <TextView
        android:id="@+id/card_entry_tv_security_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/card_entry_label_padding_vertical"
        android:text="@string/card_entry_security_code_label"
        android:textSize="@dimen/card_entry_label_text_size"
        app:layout_constraintRight_toRightOf="@+id/card_entry_align_view"
        app:layout_constraintTop_toBottomOf="@+id/card_entry_ed_enter_card"
        app:layout_constraintWidth_percent=".43" />

    <EditText
        android:id="@+id/card_entry_ed_security_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:elevation="2dp"
        android:inputType="number"
        android:maxLength="3"
        android:paddingVertical="@dimen/normal_padding"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/card_entry_input_text_size"
        app:layout_constraintLeft_toLeftOf="@+id/card_entry_tv_security_code"
        app:layout_constraintRight_toRightOf="@+id/card_entry_tv_security_code"
        app:layout_constraintTop_toBottomOf="@+id/card_entry_tv_expiry_date" />

    <TextView
        android:id="@+id/card_entry_tv_select_moto_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/card_entry_label_padding_vertical"
        android:text="@string/card_entry_select_moto_type_label"
        android:textSize="@dimen/card_entry_label_text_size"
        app:layout_constraintLeft_toLeftOf="@+id/card_entry_align_view"
        app:layout_constraintRight_toRightOf="@+id/card_entry_align_view"
        app:layout_constraintTop_toBottomOf="@+id/card_entry_ed_security_code" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_entry_cv_select_moto_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:layout_constraintLeft_toLeftOf="@+id/card_entry_align_view"
        app:layout_constraintRight_toRightOf="@+id/card_entry_align_view"
        app:layout_constraintTop_toBottomOf="@+id/card_entry_tv_select_moto_type"
        app:strokeColor="?android:colorPrimary"
        app:strokeWidth="1dp">

        <Spinner
            android:id="@+id/card_entry_spinner_moto_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/card_entry_moto_types"
            android:padding="@dimen/normal_padding"
            android:textAlignment="center" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/card_entry_tv_stored_credentials"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/card_entry_label_padding_vertical"
        android:text="@string/card_entry_stored_credentials_label"
        android:textSize="@dimen/card_entry_label_text_size"
        app:layout_constraintLeft_toLeftOf="@+id/card_entry_align_view"
        app:layout_constraintRight_toRightOf="@+id/card_entry_align_view"
        app:layout_constraintTop_toBottomOf="@+id/card_entry_cv_select_moto_type" />

    <TextView
        android:id="@+id/card_entry_tv_card_stored_on_file"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/card_entry_label_padding_vertical"
        android:text="@string/card_entry_card_stored_on_file_label"
        android:textSize="@dimen/card_entry_label_text_size"
        app:layout_constraintLeft_toLeftOf="@+id/card_entry_align_view"
        app:layout_constraintRight_toLeftOf="@+id/card_entry_switch_stored_on_file"
        app:layout_constraintTop_toBottomOf="@+id/card_entry_tv_stored_credentials" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/card_entry_switch_stored_on_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/card_entry_tv_card_stored_on_file"
        app:layout_constraintRight_toRightOf="@+id/card_entry_align_view"
        app:layout_constraintTop_toTopOf="@+id/card_entry_tv_card_stored_on_file" />

    <Button
        android:id="@+id/card_entry_btn_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/normal_padding"
        android:text="@string/card_entry_continue_label"
        android:textSize="@dimen/card_entry_label_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>